fixed error message and doku

--- a/man/liftext.1
+++ b/man/liftext.1
@@ -22,7 +22,7 @@ is a LIF disk image containing an HP text file called
 .I TEXTA 
 then
 .PP
-.B lifget -f disk1.lif TEXTA | liftext
+.B lifget -r disk1.lif TEXTA | liftext
 .PP 
 will produce a listing of this file to standard output.
 .SH AUTHOR
