--- a/debian/changelog
+++ b/debian/changelog
@@ -2,6 +2,8 @@ lifutils (1.7.3-ubuntu1) wily; urgency=medium
 
   * lifrename did not check if new filename already exists
     progs/lifrename.c 
+  * check if file name in lif header file is valid:
+    progs/lifput.c
 
  -- trusty <achim@trillian>  Sun, 13 Dec 2015 14:23:27 +0100
 
