--- a/man/liffix.1
+++ b/man/liffix.1
@@ -49,7 +49,7 @@ The LIF disk format is documented in the
 with further details (particularly HP41 and HP75 file types) in the 
 .I HP\-41 Synthetic Quick Reference Guide (Jeremy Smith)
 .SH AUTHOR
-.B lifinit
+.B liffix
 was written by Joachim Siebold, bug400@gmx.de  using code from Tony Duell, 
 ard@p850ug1.demon.co.uk and has been placed under the GNU Public 
 License version 2.0
