--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+lifutils (1.7.4-ubuntu1) wily; urgency=medium
+
+  * src/lifrename: check only if new filename is valid
+  * src/lifinit: check if directory size exceeds 1/3 of medium size
+
+ -- trusty <achim@trillian>  Sun, 03 Jan 2016 13:38:08 +0100
+
 lifutils (1.7.3-ubuntu1) wily; urgency=medium
 
   * lifrename did not check if new filename already exists
