--- a/debian/changelog
+++ b/debian/changelog
@@ -1,11 +1,12 @@
 lifutils (1.7.4-ubuntu1) wily; urgency=medium
 
-  * src/lifrename: check only if new filename is valid
-  * src/lifinit: check if directory size exceeds 1/3 of medium size
-  * src/lexcat71.c: new file
+  * src/prog/lifrename: check only if new filename is valid
+  * src/prog/lifinit: check if directory size exceeds 1/3 of medium size
+  * src/prog/lexcat71.c: new file
   * man/lexcat71.1: new file
   * doc/readme.html: information on lexcat71 added
-  * src/lifpack: check for overlapping files
+  * src/prog/lifpack: check for overlapping files
+  * src/lib/lif_dir_utils.c: rename and add file types
 
  -- trusty <achim@trillian>  Sun, 03 Jan 2016 13:38:08 +0100
 
