--- a/man/rom41hx.1
+++ b/man/rom41hx.1
@@ -24,14 +24,15 @@ and
 .I The HP41 Synthetic Programming Quick Reference Guide (Jeremy Smith)
 .SH EXAMPLES
 If
-.I HPILDv1B.ROM is the rom file of the HP-IL development module then
+.I HPILDv1B.ROM 
+is the rom file of the HP-IL development module then
 .PP
 .B cat HPILDv1B.ROM | rom41hx HPILDEV \> hpildev.sda
 .PP 
 will generate a LIF file 
-.B hpildvev.sda
+.I hpildvev.sda
 with the LIF filename
-.B HPILDEV
+.I HPILDEV
 .SH AUTHOR
 .B rom41hx
 was written by Joachim Siebold, bug400@gmx.de using code from Tony Duell, 
