added emu7470A emulator engine, added plotter.xrom modified/enhanced comp41 rmo41hx

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,5 +1,5 @@
 Authors
 =======
 The LIF Utilities were originally developped by Tony Duell and enhanced by 
-Joachim Siebold. Code was taken from hp41uc (Leo Duran), modfile (Warren Furlow)  and liftool (Christophe Gottheimer).
+Joachim Siebold. Code was taken from hp41uc (Leo Duran), modfile (Warren Furlow)  and liftool (Christophe Gottheimer). The HP7470A plotter emulator bases upon the hp2xx software (Heinz W. Werntges, Matrin Kroeker).
 
