implemented missing HP-41 implementation bytes in textlif; improved doku of liftext

--- a/man/liftext.1
+++ b/man/liftext.1
@@ -11,7 +11,8 @@ liftext \- a filter to translate an HP text file into a standard text file
 is a filter that reads an HP text file (also known as a LIF1 format file) 
 from standard input and writes the equivalent standard text file to 
 standard output. Each record of the HP text file is assumed to be one 
-line of the output file.
+line of the output file. This file type is used on the HP-71 (TEXT) and
+the extended memory or HEPAX file system of the HP-41 (ASCII).
 .SH REFERENCES
 The HP text file format is documented in section 11.2.8.1 of the 
 .I HP71 Software Internal Design Specifications Volume 1 (Hewlett\-Packard)
