added checksum update in rom41lif.c

--- a/man/rom41lif.1
+++ b/man/rom41lif.1
@@ -14,7 +14,7 @@ rom41lif \- a filter to convert a HP-41 rom file to a data file that can be used
 is a filter which generates a  LIF data file from an HP41 rom file.
 The filter reads the rom data from standard input and writes the LIF 
 file header and the uncompressed rom data to standard output. 
-Note: this filter does not adjust an incorrect ROM checksum.
+Note: this filter updates incorrect ROM checksums.
 
 .SH EXAMPLES
 If
