--- a/man/lifinit.1
+++ b/man/lifinit.1
@@ -26,6 +26,14 @@ disk:    Initializes a medium with the size of a HP9114B double sided disk
 .TP
 hdrive1: Initializes a medium with the size of a 640 KB disk
 .TP
+hdrive2: Initializes a medium with the size of a 2 MB disk
+.TP
+hdrive4: Initializes a medium with the size of a 4 MB disk
+.TP
+hdrive8: Initializes a medium with the size of a 8 MB disk
+.TP
+hdrive16: Initializes a medium with the size of a 16 MB disk
+.TP
 .I \-?
 Print a message giving the program usage to standard error.
 .SH EXAMPLES
