--- a/man/lifheader.1
+++ b/man/lifheader.1
@@ -12,7 +12,7 @@ lifheader \- show the LIF file header information of a LIF file
 .B lifheader \-?
 .SH DESCRIPTION
 .B lifheader
-is a program which shows the header information of a LIF file: file name, file type, file size, time and date of file creaion.
+is a program which shows the header information of a LIF file: file name, file type, file size, time and date of file creation and the implementation bytes.
 .SH REFERENCES
 The LIF disk directory format is documented in the
 .I HP\-IL Interface Owners Manual for the HP\-71 (Hewlett\-Packard)
