--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+lifutils (1.7.8-devel) xenial; urgency=medium
+
+  * lifdir: extended directory listing
+  * lifheader: extended output 
+
+ -- trusty <achim@trillian>  Mon, 04 Dec 2017 19:02:12 +0100
+
 lifutils (1.7.7-ubuntu1) xenial; urgency=medium
 
   * final release
