Revert "textlif: do not exit with error text file too large for the HP41"
This reverts commit 8b35558cabb1ad4db5254a7ef0cec09c593d61dd.

--- a/man/textlif.1
+++ b/man/textlif.1
@@ -26,8 +26,7 @@ This option specifies the file size in registers which shall be allocated
 for the resulting file in the HP-41 extended memory or the HEPAX file system. 
 If a value of 0 is specified the number of register is determined from the 
 size of the input text file.  According to the HEPAX documentation the 
-maximum file size is 577 registers. If this filesize is exceeded a warning
-is issued and no HP-41 specific implementing bytes are written.
+maximum file size is 577 registers.
 .TP
 .I \-?
 Print a message giving the program usage to standard error.
